Refactor document handling: replace createNewFile with createFile and register document picker

--- a/README
+++ b/README
@@ -1,2 +1,124 @@
-Fix google's 16kb warning error
-https://collaboraonline.github.io/post/build-code-android/
+# EZT_Office
+
+## 📚 Contents
+
+- 🚀 [Install](#-install)
+- ⚙️ [Setup Library](#-setup-library)
+- 🔧 [Core Functions](#-core-functions)
+- 💡 [Usage Examples](#-usage-examples)
+
+
+## Install
+
+## Trong settings.gradle.kts hoặc build.gradle cấp project
+
+```
+repositories {
+        google()
+        mavenCentral()
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/TanhB02/EZT_Office")
+            credentials {
+                username = providers.gradleProperty("gpr.user").orElse(System.getenv("GITHUB_ACTOR") ?: "").get()
+                password = providers.gradleProperty("gpr.token").orElse(System.getenv("GITHUB_TOKEN") ?: "").get()
+            }
+        }
+    }
+```
+
+### gradle.properties ---
+
+```
+gpr.user=TanhB02
+gpr.token=
+```
+
+### build.gradle(Module:app)
+
+```
+dependencies {
+	implementation "ezt.documents:libreoffice: release_version"
+}
+```
+### 🔧 Core Functions
+
+| Function | Mô tả | Return |
+|----------|-------|--------|
+| `openFile(uri: Uri?, onClosed: (() -> Unit)? = null)` | Mở file bằng LibreOffice (`LOActivity`). Tự động cấp quyền URI và đăng ký callback khi LibreOffice bị đóng. | `Unit` |
+| `createFile(fileName: String, fileType: String = "xlsx", onClosed: (() -> Unit)? = null)` | Tạo file mới trong `MediaStore` từ template có sẵn, sau đó tự động mở bằng LibreOffice. | `suspend Unit` |
+| `openSystemPicker()` | Mở trình chọn file hệ thống (`ACTION_OPEN_DOCUMENT`) với danh sách MIME types hỗ trợ. Tự động fallback sang `ACTION_GET_CONTENT` nếu cần. | `Unit` |
+| `openSystemPicker()` | Gọi system picker để chọn và mở tài liệu. Yêu cầu `registerDocumentPicker()` được gọi trước trong `Activity`. | `Unit` |
+| `registerDocumentPicker()` | Đăng ký launcher cho `ActivityResultContracts.OpenDocument`. Khi người dùng chọn file, hàm sẽ tự động mở file bằng LibreOffice. | `Unit` |
+
+---
+### 💡 Usage Examples
+
+Dưới đây là các ví dụ đầy đủ hướng dẫn cách sử dụng tất cả hàm trong `UtilsOffice`.
+
+
+#### 🔹 1. Mở file LibreOffice có sẵn
+Dùng khi bạn đã có `Uri` của file cần mở.
+Hàm này tự động cấp quyền truy cập và mở file bằng `LibreOffice (LOActivity)`.
+
+```kotlin
+val fileUri: Uri = ... // Uri của tài liệu cần mở
+UtilsOffice.openFile(fileUri) {
+    Log.d("App", "LibreOffice đã đóng.")
+}
+```
+
+---
+
+#### 🔹 2. Tạo file mới và mở bằng LibreOffice
+Dùng khi bạn muốn tạo file mới dựa trên template trong thư mục `assets/templates/`
+và mở trực tiếp bằng LibreOffice.
+Hàm này là `suspend`, cần được gọi trong coroutine (ví dụ: `lifecycleScope.launch`).
+
+```kotlin
+lifecycleScope.launch {
+    UtilsOffice.createFile(
+        fileName = "NewReport",
+        fileType = "xlsx"
+    ) {
+        Log.d("App", "LibreOffice đã đóng sau khi tạo file mới.")
+    }
+}
+```
+
+---
+
+#### 🔹 3. Mở trình chọn file hệ thống (System Picker)
+Dùng khi bạn muốn cho phép người dùng chọn một file từ bộ nhớ hệ thống.
+Hàm sẽ mở system picker với danh sách MIME types hỗ trợ như ODF, OOXML, PDF, CSV, v.v.
+Nếu thiết bị không hỗ trợ `ACTION_OPEN_DOCUMENT`, hàm sẽ tự động fallback sang `ACTION_GET_CONTENT`.
+
+> ⚠️ **Lưu ý:** Trước khi gọi `openSystemPicker()`, bạn **phải đăng ký trước** `registerDocumentPicker()` trong `onCreate()` của Activity.
+
+```kotlin
+class MainActivity : AppCompatActivity() {
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+
+        // Phải gọi trước khi dùng openSystemPicker()
+        UtilsOffice.registerDocumentPicker()
+
+        // Sau đó có thể gọi
+        UtilsOffice.openSystemPicker()
+    }
+}
+```
+
+---
+
+#### 🔹 4. Mở file và lắng nghe sự kiện khi LibreOffice đóng
+Dùng khi bạn cần thực hiện một hành động sau khi người dùng đóng tài liệu LibreOffice,
+ví dụ như làm mới UI, lưu log, hoặc gửi dữ liệu analytics.
+
+```kotlin
+UtilsOffice.openFile(uri) {
+    Toast.makeText(this, "LibreOffice đã đóng, làm mới giao diện...", Toast.LENGTH_SHORT).show()
+}
+
+
